--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -9,6 +9,10 @@
 {% block content %}
 
 
+<!-- <input type="radio" name="winner_search">Any</input><br/>
+<input type="radio" name="winner_search">Black</input><br/>
+<input type="radio" name="winner_search">White</input><br/> -->
+
 
 <div class="searchfunction centered info-table">
 
@@ -18,28 +22,36 @@
             <td class="panel without-space-below">
                 <h3>Players</h3>
                 <ul>
-                    <li><em>Username </em><input id = "user_search" placeholder="ex: avocado" size="15"></li>
-                    <li><em>Rating min </em> <input id="below_rate_search" type="number"></li>
-                    <li><em>Rating max </em><input id="above_rate_search" type="number"></li>
+                    <li><em>Username </em><br/><input id = "user_search" placeholder="ex: avocado" onkeydown="handleSearchKeyDown(event)"></li>
+                    <li><em>Rating min </em><br/><input id="below_rate_search" type="number" onkeydown="handleSearchKeyDown(event)"></li>
+                    <li><em>Rating max </em><br/><input id="above_rate_search" type="number" onkeydown="handleSearchKeyDown(event)"></li>
                 </ul>
             </td>
         
             <td class="panel without-space-below">
                 <h3>Outcome</h3>
                 <ul>
-                    <li><em>Winner</em><select id="winner_search">
-                        <option selected>Any</option>
-                        <option>Black</option>
+                    <li><em>Winner</em><br/>
+                        
+                        <!-- <select id="winner_search"> -->
+
+                        <input type="radio" name="winner_search">Any</input><br/>
+                        <input type="radio" name="winner_search">Black</input><br/>
+                        <input type="radio" name="winner_search">White</input><br/>
+                        <input type="radio" name="winner_search">Draw</input><br/>
+
+
+                        <!-- <option>Black</option> -->
                         <!-- <option>Black by checkmate</option>
                         <option>Black by resign</option>
                         <option>Black by clock</option> -->
 
-                        <option>White</option>
+                        <!-- <option>White</option> -->
                         <!-- <option>White by checkmate</option>
                         <option>White by resign</option>
                         <option>White by clock</option> -->
 
-                        <option>Draw</option>
+                        <!-- <option>Draw</option> -->
 
                     </select></li>
                 </ul>        
@@ -50,32 +62,37 @@
             <td class="panel without-space-below">
                 <h3>Opening</h3>
                 <ul>
-                    <li><em>Opening name</em><input id = "opening_name_search" placeholder="ex: scandinavian"></li>
-                    <li><em>Opening moves</em> <input id = "opening_moves_search" placeholder="ex: e4 e5"></li>
+                    <li><em>Opening name</em><br/><input id = "opening_name_search" placeholder="ex: scandinavian" onkeydown="handleSearchKeyDown(event)"></li>
+                    <li><em>Opening moves</em><br/><input id = "opening_moves_search" placeholder="ex: e4 e5" onkeydown="handleSearchKeyDown(event)"></li>
                 </ul>        
             </td>
         
             <td class="panel without-space-below">
                 <h3>Gameplay</h3>
                 <ul>
-                    <li><em>Moves </em><input id = "moves_search" placeholder="ex: Qxf4"></li>
-                    <li><em>Move count</em> <input id = "movenumb_search" type="number"></li>    
+                    <li><em>Moves </em><br/><input id = "moves_search" placeholder="ex: Qxf4" onkeydown="handleSearchKeyDown(event)"></li>
+                    <li><em>Move count</em><br/><input id = "movenumb_search" type="number" onkeydown="handleSearchKeyDown(event)"></li>    
                 </ul>        
             </td>
         
             <td class="panel without-space-below">
                 <h3>Stats</h3>
                 <ul>
-                    <li><em>Checks</em> <input id = "checks_search" type="number" size="5"></li>    
-                    <li><em>Captures </em><input id = "captures_search" type="number" size="5"></li>
-                    <li><em>Castles </em><input id = "castles_search" type="number" size="5"></li>
-                    <li><em>En passants </em><input id = "en_passants_search" type="number" size="5"></li>
+                    <li><em>Checks</em><br/><input id = "checks_search" type="number" autocomplete="off" onkeydown="handleSearchKeyDown(event)"></li>    
+                    <li><em>Captures </em><br/><input id = "captures_search" type="number" onkeydown="handleSearchKeyDown(event)"></li>
+                    <li><em>Castles </em><br/><input id = "castles_search" type="number" onkeydown="handleSearchKeyDown(event)"></li>
+                    <li><em>En passants </em><br/><input id = "en_passants_search" type="number" onkeydown="handleSearchKeyDown(event)"></li>
                 </ul>        
             </td>
         
         </tr>
     </table>
 
+
+    <div class="centered">
+        <button id ="searchbutton" style="text-shadow: 100px;">Search</button>
+    </div>
+    
 
 
 <!-- 
@@ -89,9 +106,6 @@
 
 </div>
 
-<div class="centered search">
-    <button id ="searchbutton" style="text-shadow: 100px;">Search</button>
-</div>
 
 
 
