--- a/webapp/templates/game.html
+++ b/webapp/templates/game.html
@@ -70,8 +70,8 @@
                 >Forward &#9658;</button>
                 </div>
 
-                <em>Arrow keys to move</em><br/>
-                <em>Click to jump</em>
+                <em>Arrow keys or buttons to move</em><br/>
+                <em>Click move to jump</em>
 
                 <div id="moves-list">
                     <ol>
