--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -129,6 +129,8 @@
     <div id="searchResults" class="info-table centered">
         <!-- <img id = "homeicon" src ="{{ url_for('static', filename='images/knight-white.png') }}"> -->
     </div>
+
+    <div id="more-results" class="centered"></div>
 </div>
 
 
