--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
         {% endblock %}
         </div>
 
-        <footer>Created by <a href='https://github.com/BNwike47'>Barry Nwike</a> and <a href='https://github.com/cqnykamp'>Charles Nykamp</a> for Carleton College Software Design Class, Fall 2022</footer>
+        <footer>Created by <a href='https://github.com/cqnykamp'>Charles Nykamp</a> and <a href='https://github.com/BNwike47'>Barry Nwike</a> for Carleton College Software Design Class, Fall 2022</footer>
 
 
     </body>
